# infra

./: .gitignore  .sops.yaml  README.md  cli.py  diagram.py  dmarc-todo.md  infra.d2  infra.yml
.github/workflows/: pages.yml
aws/: Pulumi.dev.yaml  Pulumi.yaml  README.md  index.ts  package.json  pnpm-lock.yaml
dns/: config.yaml
dns/secrets/: digitalocean.enc.yaml
dns/zones/: compscibois.com.yaml  harrhy.xyz.yaml  jackharrhy.com.yaml  jackharrhy.dev.yaml  notsca.red.yaml  siliconharbour.dev.yaml  stackcoin.world.yaml  stickertrade.ca.yaml  tracks.lat.yaml
docs/: diagram.py  infra.d2
docs/plans/: 2026-03-09-lists-design.md  2026-03-09-lists-plan.md  2026-03-09-mail-ingest-design.md  2026-03-09-mail-ingest-plan.md  2026-03-09-mail-ingest-replies-plan.md  2026-03-09-ses-inbound-design.md  2026-03-15-import-preview-design.md  2026-03-15-import-preview-plan.md  2026-03-15-tags-audience-design.md  2026-03-15-tags-audience-plan.md  2026-03-15-user-accounts-design.md  2026-03-15-user-accounts-plan.md  2026-03-23-vue3-cdn-design.md  2026-03-23-vue3-cdn-plan.md  mail-plan.md
hosts/mug/: compose.yml
hosts/newport/: compose.yml
nas/secrets/: synology.enc.yaml
plans/: 2026-03-09-mail-ingest-design.md  2026-03-09-mail-ingest-plan.md  2026-03-17-data-model-v2-design.md  2026-03-17-data-model-v2-plan.md  mail-plan.md
preview-router/: .gitignore  README.md  install-mac-hosts.sh  preview-router.example.toml  pyproject.toml
preview-router/preview_router/: cli.py
preview-router/templates/: ui.html.j2
scripts/: ensure-volumes.sh  render-secrets.sh
(+54 files in other folders)
